implemeted update; todo: fix update

--- a/src/app/task-management/task-management.component.html
+++ b/src/app/task-management/task-management.component.html
@@ -1,6 +1,5 @@
 <app-create-task></app-create-task>
-<div fxFlex="50">
-</div><div class="example-container">
+<div class="example-container">
     <h2>To Do</h2>
     <div 
         cdkDropList
@@ -23,8 +22,6 @@
         </div>
         </div>
     </div>
-</div>
-<div fxFlex="50">
     <div class="example-container">
         <h2>Done</h2>
         <div 
@@ -48,4 +45,3 @@
             </mat-menu>
         </div>
     </div>
-</div>
