--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -1,11 +1,29 @@
 .logo {
-  margin-left: 75px;
   font-size: 24px;
-  font-weight: lighter;;
+  font-weight: lighter;
 }
 
-.navbar-container {
-  padding: 5px;
+nav {
+  padding: 10px;
+  padding-left: -25px !important;
+  padding-right: -25px !important;
+  padding-top: 1% !important;
+  height: 40px !important;
+  width: 100% !important;
+  background: deepskyblue !important;
+  color: white;
+}
+
+#link1 {
+ float: left;
+}
+#link2 {
+  float: left;
+}
+
+mat-toolbar {
+  background: deepskyblue !important;
+  color: white;
 }
 
 .navbar-link {
@@ -13,14 +31,12 @@
   font-weight: lighter;
 }
 
-.main-content {
-  padding-left: 30px;
-}
-
 .footer {
   bottom: 0;
-  position: absolute;
+  left: 0;
+  text-align: center;
   width: 100%;
+  position: fixed !important;
 }
 
 .footer-content {
@@ -28,10 +44,13 @@
   font-weight: lighter;
   padding-left: 100px;
   letter-spacing: 3px;
+  background: deepskyblue !important;
+  color: white;
 }
 
 .bu-link {
   text-decoration: none;
+  color: white;
 }
 
 .bu-link:hover {
