--- a/src/app/task-management/task-management.component.html
+++ b/src/app/task-management/task-management.component.html
@@ -1,6 +1,10 @@
+<div fxLayout="row">
 <app-create-task></app-create-task>
+</div>
+<div fxLayout="row">
+<div fxFlex="50" id="todo">
 <div class="example-container">
-    <h2>To Do</h2>
+    <h2 style="text-align: center;">To Do</h2>
     <div 
         cdkDropList
         #todoList="cdkDropList"
@@ -22,8 +26,10 @@
         </div>
         </div>
     </div>
+</div>
+<div fxFlex="50" id="done">
     <div class="example-container">
-        <h2>Done</h2>
+        <h2 style="text-align: center;">Done</h2>
         <div 
             cdkDropList
             #doneList="cdkDropList"
@@ -33,7 +39,6 @@
             (cdkDropListDropped)="drop($event)">
         <div class="example-box" *ngFor="let item of done" cdkDrag>
             {{ item.text }}
-        </div>
         <div fxFlex fxLayoutAlign="end">
             <button [matMenuTriggerFor]="doneOptions" class="task-options-menu" mat-icon-button>
                 <mat-icon>more_horiz</mat-icon>
@@ -44,4 +49,7 @@
                 </button>
             </mat-menu>
         </div>
+        </div>
     </div>
+</div>
+</div>
