--- a/src/app/create-task/create-task.component.html
+++ b/src/app/create-task/create-task.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title style="text-align: center;">Add new task</h2>
-
-<mat-dialog-content [formGroup]="taskForm">
+<form [formGroup]="taskForm">
+<mat-dialog-content>
     <mat-form-field style="width: 200px;">
         <input type="text" placeholder="Enter a task name.." matInput formControlName="text" (keydown.enter)="createTask()" />
     </mat-form-field>
@@ -10,3 +10,4 @@
     <button mat-button (click)="cancel()">Cancel</button>
     <button mat-button [disabled]="!taskForm.valid" (click)="createTask()">Create Task</button>
 </mat-dialog-actions>
+</form>
